add a ValueList generator